--- a/fusesoc.conf
+++ b/fusesoc.conf
@@ -1,41 +1,41 @@
 [library.tb_dllp_receive]
-location = /tools/C/research/pcie_datalink_layer/tb/dllp
+location = ../tb/dllp
 sync-uri = tb/dllp/
 sync-type = local
 auto-sync = true
 
 [library.pcie_libs]
-location = /tools/C/research/pcie_datalink_layer/src
+location = ../src
 sync-uri = src/
 sync-type = local
 auto-sync = true
 
 [library.axis_libs]
-location = /tools/C/research/pcie_datalink_layer/verilog-axis
+location = ../verilog-axis
 sync-uri = verilog-axis/
 sync-type = local
 auto-sync = true
 
 [library.base_uvm]
-location = /tools/C/research/pcie_datalink_layer/tb
+location = ../tb
 sync-uri = tb/
 sync-type = local
 auto-sync = true
 
 [library.lint/]
-location = /tools/C/research/pcie_datalink_layer/lint
+location = ../lint
 sync-uri = lint/
 sync-type = local
 auto-sync = true
 
 [library.lint]
-location = /tools/C/research/pcie_datalink_layer/lint
+location = ../lint
 sync-uri = lint/
 sync-type = local
 auto-sync = true
 
 [library.tb_libs]
-location = /tools/C/research/pcie_datalink_layer/tb/dllp
+location = ../tb/dllp
 sync-uri = tb/dllp/
 sync-type = local
 auto-sync = true
@@ -53,7 +53,7 @@ sync-type = git
 auto-sync = true
 
 [library.fusesoc_libs]
-location = /tools/C/research/pcie_datalink_layer/fusesoc_libraries
+location = ../fusesoc_libraries
 sync-uri = fusesoc_libraries/
 sync-type = local
 auto-sync = true
@@ -65,7 +65,7 @@ sync-type = git
 auto-sync = true
 
 [library.core_verif]
-location = /tools/C/research/pcie_datalink_layer/verif
+location = ../verif
 sync-uri = verif/
 sync-type = local
 auto-sync = true
