make fusesoc libray command bash

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-bitarray==2.9.2
-bitstring==4.2.3
-
-cocotb==1.9.2
-cocotb-bus==0.2.1
-cocotb-coverage==1.2.0
-cocotb-test==0.2.6
-cocotbext-axi==0.1.24
-cocotbext-pcie==0.2.14
-crc==7.1.0
-cryptography==3.4.8
+bitarray
+bitstring
+cocotb
+cocotb-bus
+cocotb-coverage
+cocotb-test
+cocotbext-axi
+cocotbext-pcie
+crc
+cryptography
 peakrdl==1.4.0
 peakrdl-cheader==1.0.0
 peakrdl-cli==1.4.0
