update submodule paths

--- a/fusesoc.conf
+++ b/fusesoc.conf
@@ -4,3 +4,9 @@ sync-uri = .
 sync-type = local
 auto-sync = true
 
+[library.pcie-endpoint-controller]
+location = /home/isomoye/projects/pcie_datalink_layer
+sync-uri = ./
+sync-type = local
+auto-sync = true
+
