--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
 [submodule "verilog-axis"]
 	path = verilog-axis
 	url = https://github.com/alexforencich/verilog-axis
-[submodule "gtxe2_gpl"]
-	path = gtxe2_gpl
-	url = git@github.com:Elphel/gtxe2_gpl.git
 [submodule "async_fifo"]
 	path = async_fifo
 	url = https://github.com/isomoye-msu/async_fifo.git
@@ -12,10 +9,10 @@
 	url = https://github.com/isomoye-msu/async_fifo.git
 [submodule "tb/gtxe2_gpl"]
 	path = tb/gtxe2_gpl
-	url = git@github.com:Elphel/gtxe2_gpl.git
+	url = https://github.com/Elphel/gtxe2_gpl.git
 [submodule "src/verilog-pcie"]
 	path = src/verilog-pcie
 	url = https://github.com/isomoye-msu/verilog-pcie.git
 [submodule "src/verilog-axis"]
 	path = src/verilog-axis
-	url = git@github.com:isomoye-msu/verilog-axis.git
+	url = https://github.com/isomoye-msu/verilog-pcie.git
